--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.32.1",
-    "@tanstack/react-query-devtools": "^4.32.1",
+    "@tanstack/react-query": "4.32.1",
+    "@tanstack/react-query-devtools": "4.32.1",
     "axios": "1.4.0",
     "bootstrap": "5.2.2",
     "react": "18.2.0",
